[tool.poetry]
name = "pro1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.1.1"
mypy-extensions = "^0.4.3"
importlib-metadata = "^1.7.0"
ipaddr = "^2.2.0"
keyring = "^21.2.1"
wincertstore = "^0.2"
lxml = "^4.5.1"
htmlparser = "^0.0.2"
zipp = "^3.1.0"
python-ntlm = "^1.1.0"
lockfile = "^0.12.2"
brotli = "^1.0.7"
cython = "^0.29.20"
ordereddict = "^1.1"
cryptography = "^2.9.2"
docutils = "^0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
